# fkcompute

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fk.1  pyproject.toml
.github/workflows/: docs.yml
cpp/: .gitignore  Makefile  README.md  main.cpp
cpp/examples/: bilvector_operations.cpp  example.cpp  fk_computation_test.cpp  fmpoly_example.cpp  inequality_example.cpp  parallel_demo.cpp  polynomial_example.cpp  random_fmpoly.cpp  trefoil_complete_example.cpp  trefoil_demo.cpp  trefoil_fk_example.cpp  trefoil_ilp.csv  trefoil_simple_example.cpp
cpp/include/fk/: bilvector.hpp  bmpoly.hpp  btree.hpp  fk.hpp  fk_computation.hpp  fmpoly.hpp  fmpoly_class.hpp  fmpz_wrapper.hpp  hmpoly.hpp  inequality_solver.hpp  linalg.hpp  multivariable_polynomial.hpp  polynomial_base.hpp  polynomial_config.hpp  qalg_links.hpp  qpolynomial.hpp  solution_pool_1a_double_links.hpp  string_to_int.hpp  zmpoly.hpp
cpp/src/: bmpoly.cpp  fk_computation.cpp  fk_segments_links.cpp  fmpoly.cpp  fmpoly_class.cpp  graph_search.cpp  graph_search.h  hmpoly.cpp  inequality_solver.cpp  linalg.cpp  multivariable_polynomial.cpp  qalg_links.cpp  qpolynomial.cpp  solution_pool_1a_double_links.cpp  string_to_int.cpp  zmpoly.cpp
cpp/tests/: arithmetic_test.cpp  bmpoly_test.cpp  debug_fmpoly.cpp  example.cpp  example_polynomial.json  fmpoly_compatibility_test.cpp  inverse_qpochhammer_test.cpp  new_qbinomials.cpp  out.json  parser_comparison_test.cpp  performance_comparison_test.cpp  test1_output.json  test2_output.json  test3_output.json  test_getQPolynomial.cpp  testing.cpp  xq_poch_example.cpp
data/: 4_1.json  4_1_ilp.csv  4_1_inversion.json
docs/: README.md  build_pdf.sh  cli.md  conf.py  config.md  constraint_system.md  cpp_backend.md  cpp_backend.rst  development.md  ilp.md  installation.md  installation.rst  inversion.md  mathematica.md  mathematica.rst  output.md  output.rst  overview.md  overview.rst  pandoc_pdf_header.tex  performance.md  pipeline.md  pipeline.rst  python_api.md  quickstart.md  quickstart.rst  requirements.txt  troubleshooting.md  troubleshooting.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  cli.html  configuration.html  cpp_backend.html  development.html  genindex.html  index.html  installation.html  mathematica.html  objects.inv  output.html  overview.html  pipeline.html  py-modindex.html  quickstart.html  search.html  searchindex.js  troubleshooting.html
docs/_build/html/.doctrees/: cli.doctree  configuration.doctree  cpp_backend.doctree  development.doctree  index.doctree  installation.doctree  mathematica.doctree  output.doctree  overview.doctree  pipeline.doctree  quickstart.doctree  troubleshooting.doctree
docs/_build/html/.doctrees/api/: domain.doctree  fkcompute.doctree  index.doctree  infra.doctree  interactive.doctree  inversion.doctree  output.doctree  solver.doctree
docs/_build/html/.doctrees/tutorials/: advanced.doctree  batch.doctree  index.doctree  knots.doctree  links.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/fkcompute/api/: batch.html  compute.html
docs/_build/html/_modules/fkcompute/domain/braid/: signed.html  states.html  topology.html  types.html  word.html
docs/_build/html/_modules/fkcompute/domain/constraints/: pipeline.html  reduction.html  relations.html  symbols.html  system.html
docs/_build/html/_modules/fkcompute/domain/solver/: assignment.html  symbolic_constraints.html
docs/_build/html/_modules/fkcompute/infra/: binary.html  config.html  io.html
docs/_build/html/_modules/fkcompute/interactive/: history.html  progress.html  prompts.html  ui.html  wizard.html
docs/_build/html/_modules/fkcompute/inversion/: api.html  permutations.html  search.html  validation.html  variants.html
docs/_build/html/_modules/fkcompute/output/: symbolic.html
docs/_build/html/_modules/fkcompute/solver/: ilp.html
docs/_build/html/_sources/: cli.rst.txt  configuration.rst.txt  development.rst.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  pipeline.rst.txt  quickstart.rst.txt
docs/_build/html/_sources/api/: fkcompute.rst.txt  index.rst.txt  interactive.rst.txt  inversion.rst.txt  output.rst.txt
docs/_build/html/_sources/tutorials/: advanced.rst.txt  batch.rst.txt  links.rst.txt
docs/_build/html/_static/: documentation_options.js  quantum_topology.css
docs/_build/html/api/: domain.html  fkcompute.html  index.html  infra.html  interactive.html  inversion.html  output.html  solver.html
docs/_build/html/tutorials/: advanced.html  batch.html  index.html  knots.html  links.html
docs/_static/: custom.css
docs/api/: domain.rst  index.rst  infra.rst  solver.rst
docs/tutorials/: advanced.rst  index.rst  knots.rst
mathematica/: FkCompute.paclet
mathematica/FkCompute/: PacletInfo.wl
mathematica/FkCompute/Kernel/: FkCompute.wl  init.m
src/fkcompute/: __init__.py  example_symbolic.py  install_man.py  mathematica_bridge.py
src/fkcompute/api/: README.md  __init__.py  batch.py  compute.py  presets.py
src/fkcompute/cli/: README.md  __init__.py  app.py  commands.py
src/fkcompute/data/: test.json  test_ilp.csv  test_inversion.json
src/fkcompute/domain/: README.md  __init__.py
src/fkcompute/domain/braid/: README.md  __init__.py  signed.py  states.py  topology.py  types.py  word.py
src/fkcompute/domain/constraints/: README.md  __init__.py  pipeline.py  reduction.py  relations.py  symbols.py  system.py
src/fkcompute/domain/solver/: README.md  __init__.py  assignment.py  symbolic_constraints.py
src/fkcompute/infra/: README.md  __init__.py  binary.py  config.py  io.py
src/fkcompute/interactive/: README.md  __init__.py  history.py  progress.py  prompts.py  ui.py  wizard.py
src/fkcompute/inversion/: __init__.py  api.py  permutations.py  search.py  validation.py  variants.py
src/fkcompute/output/: README.md  __init__.py  symbolic.py
src/fkcompute/solver/: README.md  __init__.py  ilp.py
tests/: test_find_sign_assignment_full.py  test_inversion_search_order.py  test_solver_ilp.py
